--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,12 @@ version = "0.1.0"
 authors = ["Hiroki Tokunaga <tokusan441@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+default = ["nightly"]
+stable = ["uart_16550/stable"]
+nightly = ["uart_16550/nightly"]
 
 [dependencies]
+conquer-once = { version = "0.3.2", default-features = false }
+spinning_top = "0.2.4"
+uart_16550 = { version = "0.2.15", default-features = false }
