--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,7 +16,7 @@ jobs:
         run: rustup component add rustfmt
 
       - name: Check style
-        run: cargo fmt --all -- --check
+        run: cargo fmt --all --no-default-features --features=stable -- --check
 
   clippy:
     runs-on: ubuntu-latest
@@ -33,7 +33,7 @@ jobs:
       - uses: actions-rs/clippy-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          args: -- -D clippy::pedantic -D clippy::all
+          args: --no-default-features --features=stable -- -D clippy::pedantic -D clippy::all
 
   doc:
     runs-on: ubuntu-latest
@@ -42,14 +42,28 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Build the documentation for testing
-        run: cargo doc
+        run: cargo doc --no-default-features --features=stable
 
-  build:
+  build_for_stable:
 
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
+    - name: Build
+      run: cargo build --verbose --no-default-features --features=stable
+    - name: Run tests
+      run: cargo test --verbose --no-default-features --features=stable
+
+  build_for_nightly:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions-rs/toolchain@v1
+      with:
+        toolchain: nightly
     - name: Build
       run: cargo build --verbose
     - name: Run tests
