--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,7 +16,7 @@ jobs:
         run: rustup component add rustfmt
 
       - name: Check style
-        run: cargo fmt --all --no-default-features --features=stable -- --check
+        run: cargo fmt --all -- --check
 
   clippy:
     runs-on: ubuntu-latest
