Revert "chore: use the forked version of `uart_16550`"
This reverts commit 854d0e6a8c303f28ad5259885cab1b550bb83aff.

I think the bug is fixed because the new version of `x86_64` is
released.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,4 +18,4 @@ nightly = ["uart_16550/nightly"]
 [dependencies]
 conquer-once = { version = "0.3.2", default-features = false }
 spinning_top = "0.2.4"
-uart_16550 = { default-features = false, git = "https://github.com/toku-sa-n/uart_16550", branch = "git_based" }
+uart_16550 = { version = "0.2.15", default-features = false }
