--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -33,7 +33,7 @@ jobs:
       - uses: actions-rs/clippy-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          args: --no-default-features --features=stable -- -D clippy::pedantic -D clippy::all
+          args: --no-default-features --features stable -- -D clippy::pedantic -D clippy::all
 
   doc:
     runs-on: ubuntu-latest
@@ -42,7 +42,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Build the documentation for testing
-        run: cargo doc --no-default-features --features=stable
+        run: cargo doc --no-default-features --features stable
 
   build:
 
