--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -33,7 +33,7 @@ jobs:
       - uses: actions-rs/clippy-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          args: -- -D clippy::pedantic -D clippy::all
+          args: --no-default-features --features stable -- -D clippy::pedantic -D clippy::all
 
   doc:
     runs-on: ubuntu-latest
@@ -42,15 +42,26 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Build the documentation for testing
-        run: cargo doc
+        run: cargo doc --no-default-features --features stable
 
   build:
 
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        toolchain: [stable, nightly]
+
     steps:
     - uses: actions/checkout@v2
+
+    - uses: actions-rs/toolchain@v1
+      with:
+        toolchain: ${{ matrix.toolchain }}
+        override: true
+
     - name: Build
-      run: cargo build --verbose
+      run: cargo build --verbose --no-default-features --features ${{ matrix.toolchain }}
+
     - name: Run tests
-      run: cargo test --verbose
+      run: cargo test --verbose --no-default-features --features ${{ matrix.toolchain }}
