--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,19 @@ name = "qemu_print"
 version = "0.1.0"
 authors = ["Hiroki Tokunaga <tokusan441@gmail.com>"]
 edition = "2018"
+license = "MIT OR Apache-2.0"
+description = "A crate prividing `qemu_print!` and `qemu_println!` macros to print strings to the console for debugging."
+repository = "https://github.com/toku-sa-n/qemu_print"
+readme = "README.md"
+categories = ["no-std", "os"]
+keywords = ["no_std", "OS", "QEMU"]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+default = ["nightly"]
+stable = ["uart_16550/stable"]
+nightly = ["uart_16550/nightly"]
 
 [dependencies]
+conquer-once = { version = "0.3.2", default-features = false }
+spinning_top = "0.2.4"
+uart_16550 = { version = "0.2.15", default-features = false }
